--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.example.KEA">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,29 +10,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".CrossCheck"
+            android:name="com.example.KEA.HolyShit"
             android:exported="false" />
         <activity
-            android:name=".RegisterUser"
+            android:name="com.example.KEA.CrossCheck"
             android:exported="false" />
         <activity
-            android:name=".NavActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat" />
+            android:name="com.example.KEA.RegisterUser"
+            android:exported="false" />
         <activity
-            android:name=".ThirdActivity"
+            android:name="com.example.KEA.NavActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat" />
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".SecondActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat" />
-        <activity
-            android:name=".MainActivity"
+            android:name="com.example.KEA.MainActivity"
             android:exported="true"
-            android:theme = "@style/Theme.AppCompat">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
